fix translation bug and white space in notes

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -507,6 +507,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.repitem h3[data-i18n='notes'],
       .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.repitem div.sheet-collapse {
         grid-column: 1 / 6; }
+        .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+        .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+        .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.repitem div.sheet-collapse span[name='attr_notes'] {
+          white-space: pre-line; }
       .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.repitem input.sheet-collapse-flag {
         grid-area: 1 / 4 / 1 / 5; }
       .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.repitem input[type='checkbox'].sheet-collapse-flag + span,
@@ -543,6 +547,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.repitem h3[data-i18n='notes'],
       .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.repitem div.sheet-collapse {
         grid-column: 1 / 6; }
+        .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+        .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+        .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.repitem div.sheet-collapse span[name='attr_notes'] {
+          white-space: pre-line; }
       .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.repitem input.sheet-collapse-flag {
         grid-area: 1 / 4 / 1 / 5; }
       .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.repitem input[type='checkbox'].sheet-collapse-flag + span,
@@ -612,6 +620,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-skill-box div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-skill-box div.repitem div.sheet-collapse {
       grid-column: 1 / 7; }
+      .sheet-pc div.sheet-skill-box div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-skill-box div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-skill-box div.repitem div.sheet-collapse span[name='attr_notes'] {
+        white-space: pre-line; }
     .sheet-pc div.sheet-skill-box div.repitem input.sheet-collapse-flag {
       grid-area: 1 / 5 / 1 / 6; }
     .sheet-pc div.sheet-skill-box div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-skill-box div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-skill-box div.repitem input[type='checkbox'].sheet-collapse-flag + span,
@@ -659,6 +671,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem div.sheet-collapse {
       grid-column: 1 / 10; }
+      .sheet-pc div.sheet-arms div.sheet-weapons div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-arms div.sheet-weapons div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-arms div.sheet-weapons div.repitem div.sheet-collapse span[name='attr_notes'] {
+        white-space: pre-line; }
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-collapse-flag {
       grid-area: 1 / 8 / 1 / 9; }
     .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-arms div.sheet-weapons div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-arms div.sheet-weapons div.repitem input[type='checkbox'].sheet-collapse-flag + span,
@@ -715,6 +731,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-arms div.sheet-armor div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-arms div.sheet-armor div.repitem div.sheet-collapse {
       grid-column: 1 / 11; }
+      .sheet-pc div.sheet-arms div.sheet-armor div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-arms div.sheet-armor div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-arms div.sheet-armor div.repitem div.sheet-collapse span[name='attr_notes'] {
+        white-space: pre-line; }
     .sheet-pc div.sheet-arms div.sheet-armor div.repitem input.sheet-collapse-flag {
       grid-area: 1 / 9 / 1 / 10; }
     .sheet-pc div.sheet-arms div.sheet-armor div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-arms div.sheet-armor div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-arms div.sheet-armor div.repitem input[type='checkbox'].sheet-collapse-flag + span,
@@ -751,6 +771,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-augs div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-augs div.repitem div.sheet-collapse {
       grid-column: 1 / 6; }
+      .sheet-pc div.sheet-augs div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-augs div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-augs div.repitem div.sheet-collapse span[name='attr_notes'] {
+        white-space: pre-line; }
     .sheet-pc div.sheet-augs div.repitem input.sheet-collapse-flag {
       grid-area: 1/1/1 / 5;
       position: absolute;
@@ -789,6 +813,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-gear div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-gear div.repitem div.sheet-collapse {
       grid-column: 1 / 6; }
+      .sheet-pc div.sheet-gear div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-gear div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-gear div.repitem div.sheet-collapse span[name='attr_notes'] {
+        white-space: pre-line; }
     .sheet-pc div.sheet-gear div.repitem input.sheet-collapse-flag {
       grid-area: 1/1/1 / 5;
       position: absolute;
@@ -838,6 +866,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       .sheet-pc div.sheet-magic div.sheet-spellsForumlas div.repitem h3[data-i18n='notes'],
       .sheet-pc div.sheet-magic div.sheet-spellsForumlas div.repitem div.sheet-collapse {
         grid-column: 1 / 8; }
+        .sheet-pc div.sheet-magic div.sheet-spellsForumlas div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+        .sheet-pc div.sheet-magic div.sheet-spellsForumlas div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+        .sheet-pc div.sheet-magic div.sheet-spellsForumlas div.repitem div.sheet-collapse span[name='attr_notes'] {
+          white-space: pre-line; }
       .sheet-pc div.sheet-magic div.sheet-spellsForumlas div.repitem input.sheet-collapse-flag {
         grid-area: 1 / 6 / 1 / 7; }
       .sheet-pc div.sheet-magic div.sheet-spellsForumlas div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-magic div.sheet-spellsForumlas div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-magic div.sheet-spellsForumlas div.repitem input[type='checkbox'].sheet-collapse-flag + span,
@@ -874,6 +906,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-magic div.sheet-magic-rituals h3[data-i18n='notes'],
     .sheet-pc div.sheet-magic div.sheet-magic-rituals div.sheet-collapse {
       grid-column: 1 / 4; }
+      .sheet-pc div.sheet-magic div.sheet-magic-rituals label[data-i18n-title='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-magic div.sheet-magic-rituals h3[data-i18n='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-magic div.sheet-magic-rituals div.sheet-collapse span[name='attr_notes'] {
+        white-space: pre-line; }
     .sheet-pc div.sheet-magic div.sheet-magic-rituals input.sheet-collapse-flag {
       grid-area: 1 / 2 / 1 / 3; }
     .sheet-pc div.sheet-magic div.sheet-magic-rituals input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-magic div.sheet-magic-rituals .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-magic div.sheet-magic-rituals input[type='checkbox'].sheet-collapse-flag + span,
@@ -917,6 +953,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
         .sheet-pc div.sheet-magic div.sheet-magic-preps div.sheet-prepared-preparations div.repitem h3[data-i18n='notes'],
         .sheet-pc div.sheet-magic div.sheet-magic-preps div.sheet-prepared-preparations div.repitem div.sheet-collapse {
           grid-column: 1 / 7; }
+          .sheet-pc div.sheet-magic div.sheet-magic-preps div.sheet-prepared-preparations div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+          .sheet-pc div.sheet-magic div.sheet-magic-preps div.sheet-prepared-preparations div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+          .sheet-pc div.sheet-magic div.sheet-magic-preps div.sheet-prepared-preparations div.repitem div.sheet-collapse span[name='attr_notes'] {
+            white-space: pre-line; }
         .sheet-pc div.sheet-magic div.sheet-magic-preps div.sheet-prepared-preparations div.repitem input.sheet-collapse-flag {
           grid-area: 1 / 5 / 1 / 6; }
         .sheet-pc div.sheet-magic div.sheet-magic-preps div.sheet-prepared-preparations div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-magic div.sheet-magic-preps div.sheet-prepared-preparations div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-magic div.sheet-magic-preps div.sheet-prepared-preparations div.repitem input[type='checkbox'].sheet-collapse-flag + span,
@@ -954,6 +994,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
       .sheet-pc div.sheet-magic div.sheet-powers div.repitem h3[data-i18n='notes'],
       .sheet-pc div.sheet-magic div.sheet-powers div.repitem div.sheet-collapse {
         grid-column: 1 / 5; }
+        .sheet-pc div.sheet-magic div.sheet-powers div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+        .sheet-pc div.sheet-magic div.sheet-powers div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+        .sheet-pc div.sheet-magic div.sheet-powers div.repitem div.sheet-collapse span[name='attr_notes'] {
+          white-space: pre-line; }
       .sheet-pc div.sheet-magic div.sheet-powers div.repitem input.sheet-collapse-flag {
         grid-area: 1/1/1 / 4;
         position: absolute;
@@ -989,6 +1033,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-matrix div.sheet-programs div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-matrix div.sheet-programs div.repitem div.sheet-collapse {
       grid-column: 1 / 6; }
+      .sheet-pc div.sheet-matrix div.sheet-programs div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-matrix div.sheet-programs div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-matrix div.sheet-programs div.repitem div.sheet-collapse span[name='attr_notes'] {
+        white-space: pre-line; }
     .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-collapse-flag {
       grid-area: 1 / 4 / 1 / 5; }
     .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-matrix div.sheet-programs div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-matrix div.sheet-programs div.repitem input[type='checkbox'].sheet-collapse-flag + span,
@@ -1038,6 +1086,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem div.sheet-collapse {
       grid-column: 1 / 7; }
+      .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem div.sheet-collapse span[name='attr_notes'] {
+        white-space: pre-line; }
     .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-collapse-flag {
       grid-area: 1 / 5 / 1 / 6; }
     .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-matrix div.sheet-complex-forms div.repitem input[type='checkbox'].sheet-collapse-flag + span,
@@ -1071,6 +1123,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem div.sheet-collapse {
       grid-column: 1 / 5; }
+      .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem div.sheet-collapse span[name='attr_notes'] {
+        white-space: pre-line; }
     .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem input.sheet-collapse-flag {
       grid-area: 1 / 3 / 1 / 4; }
     .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-social div.sheet-lifestyle div.repitem input[type='checkbox'].sheet-collapse-flag + span,
@@ -1114,6 +1170,10 @@ div.sheet-matrix-device .sheet-matrixFirewall {
     .sheet-pc div.sheet-social div.sheet-contacts div.repitem h3[data-i18n='notes'],
     .sheet-pc div.sheet-social div.sheet-contacts div.repitem div.sheet-collapse {
       grid-column: 1 / 8; }
+      .sheet-pc div.sheet-social div.sheet-contacts div.repitem label[data-i18n-title='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-social div.sheet-contacts div.repitem h3[data-i18n='notes'] span[name='attr_notes'],
+      .sheet-pc div.sheet-social div.sheet-contacts div.repitem div.sheet-collapse span[name='attr_notes'] {
+        white-space: pre-line; }
     .sheet-pc div.sheet-social div.sheet-contacts div.repitem input.sheet-collapse-flag {
       grid-area: 1 / 6 / 1 / 7; }
     .sheet-pc div.sheet-social div.sheet-contacts div.repitem input.sheet-collapse-flag + span.sheet-pictos, .sheet-pc div.sheet-social div.sheet-contacts div.repitem .sheet-settings-toggle input[type='checkbox'].sheet-collapse-flag + span, .sheet-settings-toggle .sheet-pc div.sheet-social div.sheet-contacts div.repitem input[type='checkbox'].sheet-collapse-flag + span,
