New Sheet theme
Empire

--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
@@ -15,9 +15,6 @@
 	margin-top: -13px;
 	min-width: 850px;
 }
-#myDIV {
-  width: 100%;
-}
 
 .sheet-useBackground input[value="2"]:checked ~ *.sheet-background {
 	padding: 0  3px 3px !important;
@@ -26,6 +23,16 @@
 	border-image: url('https://github.com/Djjus/roll20-character-sheets/blob/master/Warhammer%204e%20Character%20Sheet/assets/csborder_dark.png?raw=true') 27 round;
 	margin-top: -13px;
 	min-width: 850px;
+}
+
+.sheet-useBackground input[value="3"]:checked ~ *.sheet-background {
+	padding: 0  3px 3px !important;
+	background: url('https://github.com/Djjus/roll20-character-sheets/blob/master/Warhammer%204e%20Character%20Sheet/assets/csbg_empire.png?raw=true');
+	border: 27px solid transparent;
+	border-image: url('https://github.com/Djjus/roll20-character-sheets/blob/master/Warhammer%204e%20Character%20Sheet/assets/csborder_empire.png?raw=true') 27 round;
+	margin-top: -13px;
+	min-width: 850px;
+	color: white;
 }
 
 .sheet-area-border {
