[Ryuutama]: updating spell repeating section

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -1,14 +1,18 @@
-@import url('https://fonts.googleapis.com/css?family=Fresca&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto|Bellota&display=swap');
 
 * {
-    font-family: 'Apple Chancery', 'Fresca', 'Palatino Linotype', arial;
+    font-family: 'Apple Chancery', 'Bellota', 'Palatino Linotype', arial;
 }
 
-* , *:before, *:after{ 
-    box-sizing:border-box; 
-    -moz-box-sizing:border-box; 
-    -webkit-box-sizing:border-box; 
+* , *:before, *:after{
+    box-sizing:border-box;
+    -moz-box-sizing:border-box;
+    -webkit-box-sizing:border-box;
     -ms-box-sizing:border-box;
+}
+
+.repcontainer .itemcontrol {
+    z-index: 100;
 }
 
 textarea {
@@ -91,7 +95,7 @@ hr {
 .sheet-condInfo { grid-area: 1 / 3 / 2 / 4; }
 .sheet-condition { grid-area: 2 / 3 / 3 / 4; }
 
-    
+
 .sheet-hpmpHeader {
     color: black;
     /* background: #45619e; */
@@ -189,6 +193,12 @@ hr {
 .sheet-spellEffect {
     margin: 0 5px;
     height: 75px;
+}
+
+.sheet-spellEffectDisplay {
+    padding-left: 10px;
+    margin: 0 5px;
+    font-family: 'Roboto';
 }
 
 .sheet-spellTypes {
@@ -410,7 +420,7 @@ input.sheet-overburdenPenalty {
     display: inline;
 }
 
-/* Weapon Mastery 
+/* Weapon Mastery
     ============================= */
 input.sheet-radioChoice {
     width: 130px;
@@ -524,7 +534,7 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
     background-repeat: repeat-y;
     min-height: 10px;
     background-size: 100% 34px;
-    font-family: 'Apple Chancery', 'Fresca', 'Palatino Linotype', cursive;
+    font-family: 'Apple Chancery', 'Bellota', 'Palatino Linotype', cursive;
     font-weight: bold;
 }
 
@@ -646,6 +656,57 @@ button[type=roll].sheet-skill-check-button {
     padding: 0px;
     margin: 0px;
 }
+
+/* Spell repeating section
+    ============================= */
+
+.sheet-spell-toggles {
+    font-family: "pictos";
+    position: relative;
+    cursor: pointer;
+    opacity: 0.5;
+    height: 0;
+    width: 0;
+    bottom: 22px;
+    float: right;
+}
+
+input.sheet-spell-checkbox {
+    opacity: 0;
+    z-index: 2;
+}
+
+input.sheet-spell-toggles:not(:checked) + span {
+    opacity: 1;
+}
+
+input[name='attr_collapse']:checked ~ hr,
+input[name='attr_collapse']:checked ~ div.sheet-collapse,
+input[name='attr_settings']:checked ~ div.sheet-settings {
+    display: none;
+}
+
+div.sheet-collapse,
+div.sheet-settings {
+    display: flex;
+}
+
+.sheet-spell-details {
+    display: grid;
+    grid-template-columns: 200px 50px repeat(4, 135px);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    text-align: left;
+}
+
+.sheet-spellName     { grid-area: 1 / 1 / 2 / 2; }
+.sheet-spellCost     { grid-area: 1 / 2 / 2 / 3; }
+.sheet-spellDuration { grid-area: 1 / 3 / 2 / 4; }
+.sheet-spellTarget   { grid-area: 1 / 4 / 2 / 5; }
+.sheet-spellRange    { grid-area: 1 / 5 / 2 / 6; }
+.sheet-spellTypes    { grid-area: 1 / 6 / 2 / 7; }
+
 
 /* NPC checkbox functionality
     ============================= */
