[Ryuutama]: adding padding to repeating area

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -197,6 +197,7 @@ hr {
 
 .sheet-spellEffectDisplay {
     padding-left: 10px;
+    padding-bottom: 10px;
     margin: 0 5px;
     font-family: 'Roboto';
 }
@@ -706,6 +707,11 @@ div.sheet-settings {
 .sheet-spellTarget   { grid-area: 1 / 4 / 2 / 5; }
 .sheet-spellRange    { grid-area: 1 / 5 / 2 / 6; }
 .sheet-spellTypes    { grid-area: 1 / 6 / 2 / 7; }
+
+
+.repcontainer[data-groupname='repeating_spells'] {
+    padding-bottom: 20px;
+}
 
 
 /* NPC checkbox functionality
