[Ryuutama]: adding dropdown options, adding text wrap to some spans

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -658,6 +658,7 @@ button[type=roll].sheet-skill-check-button {
     border: none;
     padding: 0px;
     margin: 0px;
+    height: auto;
 }
 
 /* Spell repeating section
@@ -696,7 +697,7 @@ div.sheet-settings {
 
 .sheet-spell-details {
     display: grid;
-    grid-template-columns: 200px 50px 100px 200px 130px 100px;
+    grid-template-columns: 200px 50px 100px 200px 125px 100px;
     grid-template-rows: 1fr;
     text-align: left;
 }
@@ -708,10 +709,8 @@ div.sheet-settings {
 .sheet-spellRange    { grid-area: 1 / 5 / 2 / 6; }
 .sheet-spellTypes    { grid-area: 1 / 6 / 2 / 7; }
 
-.sheet-ellipsis {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+.sheet-spellWrap {
+    white-space: normal;
     width: 100%;
 }
 
