convert roll template pug, add fade/draain to chat template

--- a/Shadowrun5thEdition/Shadowrun5thEdition.css
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.css
@@ -284,6 +284,9 @@ div.sheet-matrix-device .sheet-matrixFirewall {
 .sheet-text-left {
   text-align: left; }
 
+.sheet-dicefontd6 {
+  font-family: "dicefontd6"; }
+
 /***** GRID *****/
 .sheet-pc div.sheet-repeating-container div.repitem, .sheet-pc div.sheet-repeating-container div.repitem div.sheet-settings, .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-quality div.sheet-headers, .sheet-pc div.sheet-core div.sheet-quality-box div.sheet-martial div.sheet-headers, .sheet-pc div.sheet-skill-box div.sheet-row-long, .sheet-pc div.sheet-arms div.sheet-headers, .sheet-pc div.sheet-magic div.sheet-headers, .sheet-pc div.sheet-matrix div.sheet-complex-forms div.sheet-headers {
   grid-column-gap: 1%;
@@ -2428,7 +2431,7 @@ span.sheet-d6 {
 .sheet-textboxes,
 .sheet-optional-flag[value='0'] + .sheet-attr-header,
 .sheet-category + div,
-.sheet-category + div + div, .sheet-npc, .sheet-pc, .sheet-arms, .sheet-augs, .sheet-core, .sheet-gear, .sheet-options, .sheet-social, .sheet-vehicle, .sheet-skills-active,
+.sheet-category + div + div, .sheet-npc, .sheet-pc, .sheet-options_toggle:not([value='arms']) ~ .sheet-arms, .sheet-options_toggle:not([value='augs']) ~ .sheet-augs, .sheet-options_toggle:not([value='core']) ~ .sheet-core, .sheet-options_toggle:not([value='gear']) ~ .sheet-gear, .sheet-options_toggle:not([value='options']) ~ .sheet-options, .sheet-options_toggle:not([value='social']) ~ .sheet-social, .sheet-options_toggle:not([value='magic']) ~ .sheet-magic, .sheet-options_toggle:not([value='matrix']) ~ .sheet-matrix, .sheet-options_toggle:not([value='vehicle']) ~ .sheet-vehicle, .sheet-skills-active,
 .sheet-skills-know,
 .sheet-skills-lang, .sheet-magic-spells, .sheet-magic-preps, .sheet-magic-rituals, .sheet-quality, .sheet-martial, div.sheet-collapse,
 .sheet-settings, input.sheet-settings-toggle:checked ~ div.sheet-display,
@@ -2438,7 +2441,7 @@ input.sheet-settings-toggle:checked ~ .sheet-attr-lim div.sheet-display,
 input.sheet-settings-toggle[value='settings'] ~ div.sheet-display,
 input.sheet-settings-toggle[value='display'] ~ div.sheet-settings,
 input.sheet-settings-toggle[value='display'] ~ div.sheet-settings-grid, input.sheet-settings-toggle[value='display'] ~ .sheet-settings, .sheet-hide-magic, .sheet-hide-resonance, div.sheet-weapon-range,
-div.sheet-weapon-melee, .sheet-grunt, .sheet-host, .sheet-sprite, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(2),
+div.sheet-weapon-melee, .sheet-grunt, .sheet-host, .sheet-sprite, .sheet-vehicle, input[name='attr_sheet_type'][value='host'] ~ .sheet-npc .sheet-column:nth-of-type(2),
 input[name='attr_sheet_type'][value='sprite'] ~ .sheet-npc .sheet-column:nth-of-type(1n+2), input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-magic,
 input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-hide-resonance,
 input[name='attr_flag_special'][value='mundane'] ~ div.sheet-npc .sheet-grunt.sheet-hide-magic,
@@ -2463,7 +2466,8 @@ input[name='attr_weapon_range'][value='melee'] ~ div.sheet-settings label[data-i
 input[name='attr_weapon_range'][value='melee'] ~ div.sheet-settings span, input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='combat'],
 input[name='attr_category']:not([value='Combat']) ~ h2[data-i18n='dam'],
 input[name='attr_category']:not([value='Combat']) ~ select[name='attr_combat_type'],
-input[name='attr_category']:not([value='Combat']) ~ label[data-i18n-title='dam'] {
+input[name='attr_category']:not([value='Combat']) ~ label[data-i18n-title='dam'],
+.sheet-display-none {
   display: none; }
 
 .sheet-display-flag:checked ~ .sheet-collapsable .sheet-desc, .sheet-tab-switch[value='active'] ~ .sheet-skills-active,
@@ -2633,31 +2637,46 @@ div.sheet-footer img {
   color: #fff;
   font-size: 1.5em;
   font-variant: small-caps;
-  font-weight: bold;
   letter-spacing: 2px;
-  padding: 8px 0px 3px 0px;
+  padding: 3px 0px 5px 0px;
   text-align: center;
   text-transform: capitalize; }
-
-.sheet-rolltemplate-rolls .sheet-template-header span {
-  font-family: 'tahoma';
-  font-size: 0.5em;
-  font-weight: normal;
-  font-variant: normal;
-  letter-spacing: 1px; }
+  .sheet-rolltemplate-rolls .sheet-template-header h1 {
+    font-weight: bold;
+    font-size: 1.1em;
+    color: #fff; }
+  .sheet-rolltemplate-rolls .sheet-template-header span {
+    font-family: 'tahoma';
+    font-size: 0.5em;
+    font-weight: normal;
+    font-variant: normal;
+    letter-spacing: 1px; }
 
 .sheet-rolltemplate-rolls .sheet-template-row {
   color: #fff;
   text-align: center;
   font-size: 18px;
-  background-color: #555;
+  background-color: #1c1c1c;
   box-shadow: inset 0px 0px 3px 1px #000;
   line-height: 1.1em;
   font-family: 'helvetica';
   padding: 5px 5px 3px 5px; }
-
-.sheet-rolltemplate-rolls .sheet-template-row:nth-child(2n+0) {
-  background-color: #1c1c1c; }
+  .sheet-rolltemplate-rolls .sheet-template-row:nth-child(2n+0) {
+    background-color: #555; }
+  .sheet-rolltemplate-rolls .sheet-template-row a[href^="~"] {
+    font-family: "dicefontd6";
+    color: #1c1c1c;
+    border: none;
+    box-shadow: outset 0px 0px 3px 1px #000;
+    font-size: 1.8em;
+    background: none !important;
+    padding: 1px;
+    color: #fff;
+    text-shadow: 1px 1px 2px black, 0 0 25px #1c1c1c, 0 0 5px #1c1c1c; }
+    .sheet-rolltemplate-rolls .sheet-template-row a[href^="~"]:hover, .sheet-rolltemplate-rolls .sheet-template-row a[href^="~"]:focus, .sheet-rolltemplate-rolls .sheet-template-row a[href^="~"]:active {
+      font-weight: bold;
+      color: #fff;
+      text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px #610b0d; }
 
 .sheet-rolltemplate-rolls .inlinerollresult {
   display: inline-block;
