--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -171,6 +171,10 @@ select {
   text-align: left;
 }
 
+.sheet-dicefontd6 {
+  font-family: "dicefontd6"
+}
+
 /***** GRID *****/
 %gridGap {
 	grid-column-gap: 1%;
