--- a/Shadowrun5thEdition/src/pug/tabs/matrix.pug
+++ b/Shadowrun5thEdition/src/pug/tabs/matrix.pug
@@ -33,6 +33,10 @@
               h2.text-capitalize(data-i18n=val)
           fieldset(class=`repeating_forms`)
             input(name='attr_dicepool' type='hidden' value='0')
+
+            //- This button displays in the roll template in chat window
+            button.display-none(name="roll_fade" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{fade}}}{{base=^{base}}}{{dice=[[((@{fade_attribute_1}+@{fade_attribute_2}+@{fade_modifier})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}")
+
             +displayRollButton(pcComplexFormButton, true)
             - const complexFormSpans = complexFormAttributes.shift();
             each val in complexFormSpans
