--- a/Shadowrun5thEdition/src/scss/_hide.scss
+++ b/Shadowrun5thEdition/src/scss/_hide.scss
@@ -1,4 +1,7 @@
-	%display-none { display: none; }
+	%display-none,
+  .sheet-display-none { 
+    display: none; 
+  }
 	%display-inline { display: inline; }
 
 	%display-inline-grid { display: inline-grid; }
@@ -24,8 +27,13 @@
 
 	/***** TABS *****/
 	@each $tab in $tabs {
-		.sheet-#{$tab} { @extend %display-none; }
-		.sheet-options_toggle[value='#{$tab}'] ~ .sheet-#{$tab} { @extend %display-inline-block; }
+		.sheet-options_toggle[value='#{$tab}'] ~ .sheet-#{$tab} { 
+      @extend %display-inline-block;
+    }
+
+    .sheet-options_toggle:not([value='#{$tab}']) ~ .sheet-#{$tab} { 
+      @extend %display-none; 
+    }
 	}
 
 	/***** SWITCH BETWEEN DIFFERENT TABS *****/ 
