--- a/Shadowrun5thEdition/src/pug/_mixins.pug
+++ b/Shadowrun5thEdition/src/pug/_mixins.pug
@@ -103,75 +103,80 @@ mixin fadeDrainSection(fadeOrDrain, adept)
 
 //- PC SPELLS AND PREPARATIONS
 mixin pcSpells(type)
-    - const rollInfoObject = type === 'preps' ? pcAlchemySpellObject : pcSorcerySpellObject;
-    - const repeatingSection = `@{repeating_${type}`+'_${x}';
+  - const rollInfoObject = type === 'preps' ? pcAlchemySpellObject : pcSorcerySpellObject;
+  - const repeatingSection = `@{repeating_${type}`+'_${x}';
     
-    .rows.repeating-container
-        fieldset(class=`repeating_${type}`)
-            input(name='attr_dicepool' type='hidden' value='0')
-            button(name=`roll_${type}}` type='roll' value!=rollBeginging+'{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})'+rollEnding+'{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]]}}')
-                span(name='attr_name')
-            each val in ['type', 'range', 'duration', 'drain']
-                span.center(name='attr_'+val)
-            input.collapse-flag(name='attr_display_flag' type='checkbox' checked)
-            span.pictos i
-            input.settings-flag(name='attr_flag' title='Settings toggle' type='checkbox' checked)
-            span.pictos x
-            .collapse
-                span(name='attr_notes')
-            .settings
-                each val, key in pcCoreSpellObject
-                    - const translationKey = key.toLowerCase();
-                    - const attrName = key.toLowerCase();
+  .rows.repeating-container
+      fieldset(class=`repeating_${type}`)
+        input(name='attr_dicepool' type='hidden' value='0')
+          
+        //- This button displays in the roll template in chat window
+        button.display-none(name="roll_drain" type="roll" value="@{gm_toggle} &{template:rolls}{{mod=[[@{modifiers_toggle}]]}}{{edge=[[@{edge_toggle}]]}}{{header=^{drain}}}{{base=^{base}}}{{dice=[[((@{drain_attribute_1}+@{drain_attribute_2}+@{drain_modifier})+@{modifiers_toggle}+@{edge_toggle})d6>5@{explode_toggle}]]}}")
+
+        //- This the spell rolling button on the sheet
+        button(name=`roll_${type}` type='roll' value!=rollBeginging+'{{header=@{name}}}{{base=^{magic}}}{{dice=[[((@{skill}+@{dicepool}+@{magic})'+rollEnding+`{{desc=@{combat_type}?{Force|}}}{{drain=[[?{Force|}+(@{drain})]] [f](~repeating_${type}_drain)}}`)
+            span(name='attr_name')
+        each val in ['type', 'range', 'duration', 'drain']
+            span.center(name='attr_'+val)
+        input.collapse-flag(name='attr_display_flag' type='checkbox' checked)
+        span.pictos i
+        input.settings-flag(name='attr_flag' title='Settings toggle' type='checkbox' checked)
+        span.pictos x
+        .collapse
+            span(name='attr_notes')
+        .settings
+            each val, key in pcCoreSpellObject
+                - const translationKey = key.toLowerCase();
+                - const attrName = key.toLowerCase();
+                if val['type'] === 'select'
+                    select(name=`attr_${attrName}` title=`${repeatingSection}_${attrName}}` value=val['default'])
+                        each type in val['array']
+                            - const i18n = type.toLowerCase();
+                            if val['default'] === i18n
+                                option(data-i18n=i18n value=type 'selected') #{i18n}
+                            else
+                                option(data-i18n=i18n value=type) #{i18n}
+                else
+                    label(data-i18n-title=translationKey title=key)
+                        input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`${repeatingSection}_${attrName}}` type=val['type'])
+            .row
+                each val, key in pcCatagorySpellObject
+                    - const translationKey = key.toLowerCase().replace(' ', '');
+                    - const attrName = key === 'Combat' ? 'combat_type' : key.toLowerCase();
+                    h3(data-i18n=translationKey) #{key}
                     if val['type'] === 'select'
                         select(name=`attr_${attrName}` title=`${repeatingSection}_${attrName}}` value=val['default'])
                             each type in val['array']
-                                - const i18n = type.toLowerCase();
+                                - const i18n = key === 'Combat' ? type.split(' ')[0].replace(',','').toLowerCase() : type.toLowerCase();
                                 if val['default'] === i18n
                                     option(data-i18n=i18n value=type 'selected') #{i18n}
+                                else if i18n === 'force'
+                                    option(value=type 'selected')
                                 else
                                     option(data-i18n=i18n value=type) #{i18n}
                     else
                         label(data-i18n-title=translationKey title=key)
                             input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`${repeatingSection}_${attrName}}` type=val['type'])
-                .row
-                    each val, key in pcCatagorySpellObject
-                        - const translationKey = key.toLowerCase().replace(' ', '');
-                        - const attrName = key === 'Combat' ? 'combat_type' : key.toLowerCase();
-                        h3(data-i18n=translationKey) #{key}
-                        if val['type'] === 'select'
-                            select(name=`attr_${attrName}` title=`${repeatingSection}_${attrName}}` value=val['default'])
-                                each type in val['array']
-                                    - const i18n = key === 'Combat' ? type.split(' ')[0].replace(',','').toLowerCase() : type.toLowerCase();
-                                    if val['default'] === i18n
-                                        option(data-i18n=i18n value=type 'selected') #{i18n}
-                                    else if i18n === 'force'
-                                        option(value=type 'selected')
-                                    else
-                                        option(data-i18n=i18n value=type) #{i18n}
-                        else
-                            label(data-i18n-title=translationKey title=key)
-                                input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`${repeatingSection}_${attrName}}` type=val['type'])
-                .row
-                    each val, key in rollInfoObject
-                        - const translationKey = key.toLowerCase().replace(' ', '');
-                        - const attrName = key === 'modifier dice' ? 'dicepool_modifier' : key.includes('Group') ? key.split(' ')[0].toLowerCase() : key === 'Notes' ? 'note' : key.toLowerCase();
-                        h3(data-i18n=translationKey) #{key}
-                        if val['type'] === 'select'
-                            select(name=`attr_${attrName}` title=`${repeatingSection}_${attrName}}` value=val['default'])
-                                each skill in val['array']
-                                    - const i18n = skill.includes('Group') ? skill.toLowerCase().replace(' ', '') : skill.toLowerCase();
-                                    - const attrName = skill.includes('Group') ? skill.toLowerCase().split(' ')[0] : skill.toLowerCase();
-                                    if val['default'] === `@{${attrName}}`
-                                        option(data-i18n=i18n value=`@{${attrName}}` 'selected') #{i18n}
-                                    else
-                                        option(data-i18n=i18n value=`@{${attrName}}`) #{i18n}
-                        else
-                            label(data-i18n-title=translationKey title=key)
-                                input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`${repeatingSection}_${attrName}}` type=val['type'] value=val['default'])
-                h3(data-i18n='notes') notes
-                label(data-i18n-title='notes' title='notes')
-                    textarea(name='attr_notes' placeholder='Notes' title=`${repeatingSection}_notes}` type='text' value='')
+            .row
+                each val, key in rollInfoObject
+                    - const translationKey = key.toLowerCase().replace(' ', '');
+                    - const attrName = key === 'modifier dice' ? 'dicepool_modifier' : key.includes('Group') ? key.split(' ')[0].toLowerCase() : key === 'Notes' ? 'note' : key.toLowerCase();
+                    h3(data-i18n=translationKey) #{key}
+                    if val['type'] === 'select'
+                        select(name=`attr_${attrName}` title=`${repeatingSection}_${attrName}}` value=val['default'])
+                            each skill in val['array']
+                                - const i18n = skill.includes('Group') ? skill.toLowerCase().replace(' ', '') : skill.toLowerCase();
+                                - const attrName = skill.includes('Group') ? skill.toLowerCase().split(' ')[0] : skill.toLowerCase();
+                                if val['default'] === `@{${attrName}}`
+                                    option(data-i18n=i18n value=`@{${attrName}}` 'selected') #{i18n}
+                                else
+                                    option(data-i18n=i18n value=`@{${attrName}}`) #{i18n}
+                    else
+                        label(data-i18n-title=translationKey title=key)
+                            input(name=`attr_${attrName}` placeholder=val['placeholder'] title=`${repeatingSection}_${attrName}}` type=val['type'] value=val['default'])
+            h3(data-i18n='notes') notes
+            label(data-i18n-title='notes' title='notes')
+                textarea(name='attr_notes' placeholder='Notes' title=`${repeatingSection}_notes}` type='text' value='')
 
 
 //- PC ARMS
