--- a/Shadowrun5thEdition/src/scss/_rolltemplate.scss
+++ b/Shadowrun5thEdition/src/scss/_rolltemplate.scss
@@ -10,37 +10,67 @@
 		color           : #fff;
 		font-size       : 1.5em;
 		font-variant    : small-caps;
-		font-weight     : bold;
 		letter-spacing  : 2px;
-		padding         : 8px 0px 3px 0px;
+		padding         : 3px 0px 5px 0px;
 		text-align      : center;
-		text-transform  : capitalize;}
+		text-transform  : capitalize;
 
-	.sheet-rolltemplate-rolls .sheet-template-header span {
-		font-family   : 'tahoma';
-		font-size     : 0.5em;
-		font-weight   : normal;
-		font-variant  : normal;
-		letter-spacing: 1px;}
+    h1 {
+      font-weight: bold;
+      font-size: 1.1em;
+      color: #fff;
+    }
+
+    span {
+      font-family   : 'tahoma';
+      font-size     : 0.5em;
+      font-weight   : normal;
+      font-variant  : normal;
+      letter-spacing: 1px;
+    }
+  }
 
 	.sheet-rolltemplate-rolls .sheet-template-row {
 		color           : #fff;
 		text-align      : center;
 		font-size       : 18px;
-		background-color: #555;
+		background-color: #1c1c1c;
 		box-shadow      : inset 0px 0px 3px 1px #000;
 		line-height     : 1.1em;
 		font-family     : 'helvetica';
-		padding         : 5px 5px 3px 5px;}
+		padding         : 5px 5px 3px 5px;
 
-	.sheet-rolltemplate-rolls .sheet-template-row:nth-child(2n+0) {background-color: #1c1c1c;}
+    &:nth-child(2n+0) {
+      background-color: #555;
+    }
+
+    //Drain button
+    a[href^="~"] {
+      font-family: "dicefontd6";
+      color: #1c1c1c;;
+      border: none;
+      box-shadow: outset 0px 0px 3px 1px #000;
+      font-size: 1.8em;
+      background: none !important;
+      padding: 1px;
+      color: #fff;
+      text-shadow: 1px 1px 2px black, 0 0 25px #1c1c1c, 0 0 5px #1c1c1c;
+      
+       &:hover, &:focus, &:active { 
+        font-weight: bold; 
+        color: #fff;
+        text-shadow: 1px 1px 2px black, 0 0 25px red, 0 0 5px $red;
+      }
+    }
+  }
 
 	.sheet-rolltemplate-rolls .inlinerollresult {
 		display         :inline-block;
 		color           : #fff;
 		font-size       : 25px;
 		background-color: transparent;
-		border          : none;}
+		border          : none;
+  }
 
 	.sheet-rolltemplate-rolls .inlinerollresult.fullfail,
 	.sheet-rolltemplate-rolls .inlinerollresult.fullcrit,
