--- a/Shadowrun5thEdition/Shadowrun5thEdition.scss
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.scss
@@ -672,7 +672,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 						}
 					}
 				}
-
 			}
 		}
 
@@ -719,6 +718,12 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 				}
 			}	
 		}
+
+
+    //used in magic & complex forms
+    select.sheet-attribute-select {
+      margin-top: 1%;
+    }
 
 		/***** MAGIC *****/
 		div.sheet-magic {
@@ -815,7 +820,6 @@ $npcTypes: 'grunt', 'host', 'sprite', 'vehicle';
 					}
 				}
 			}
-
 
 			/***** ADEPT POWERS *****/
 			div.sheet-powers {
